Main UI
- Added an info text on the login screen
- Improved UI of the login panel

Reader UI
- Added button to enable/disable page turn animations
- Android navigation bar disappears in reader mode

Build
- 

Fixes
- Fixed android status bar overlapping main UI