@@ -353,6 +353,8 @@ body {
 	margin: 2px;
 	border-radius: 50%;
 	background-color: var(--mb-hover-color);
+	cursor: pointer;
+
 }
 
 .mini-thumb:hover {
@@ -456,24 +458,25 @@ body {
 	bottom: 0px;
 	background-color: hsla(348, 100%, 20%, 0.75);
 	padding: 0px 20px;
-	overflow:auto;
+	overflow: auto;
 	backdrop-filter: blur(20px);
-	transition:all 0.3s
+	transition: all 0.3s
 }
 
-#infoText.visible{
-	display:block;
+#infoText.visible {
+	display: block;
 }
 
-#infoText h1{
- font-size: 24px;
- font-weight: 600;
- margin-bottom:20px;
- margin-top:30px;
+#infoText h1 {
+	font-size: 24px;
+	font-weight: 600;
+	margin-bottom: 20px;
+	margin-top: 30px;
 }
 
-#infoText div, li{
-	margin-bottom:10px;
+#infoText div,
+li {
+	margin-bottom: 10px;
 }
 
 @keyframes fadeIn {
