@@ -1,7 +1,9 @@
 Main UI
 - Added an info text on the login screen
 - Improved UI of the login panel
-
+- Added fallback image for foreign language library thumbnails
+- Series summary from first available book when no series summary is present
+ 
 Reader UI
 - Added button to enable/disable page turn animations
 - Android navigation bar disappears in reader mode
@@ -11,3 +13,4 @@ Build
 
 Fixes
 - Fixed android status bar overlapping main UI
+- Fixed book cover image scaling
